# Unit

./: .gitignore  DB_MEMORY_SCHEME.md  DesktopAPP.md  LICENSE  README.md  RPC_REQUESTS.md  SMART_POINTERS.md  gihub_actions.yml  rockswiki.md
.obsidian/: workspace
RockDBInstallation/: rocksdb-install.sh
Rust-helps/: CLOSURES.md  CRATES.md  README.md  SMART_POINTERS.md
Rust-helps/rust-files/: enums3.rs  errors3.rs  generics3.rs  modules2.rs  structs1.rs  structs3.rs
USC/: README.md
USC/.obsidian/: workspace
UVM/: BlockHandler.cpp  BlockHandler.h  CMakeLists.txt  Opcodes.h  TXManager.cpp  VM.cpp  VM.h  build_n_run.sh  create_unit_db.sh  delete_unit_db.sh  main.cpp  reset_unit_db.sh
UVM/Blockchain_core/: Block.cpp  Block.h  Transaction.cpp  Transaction.h
UVM/Blockchain_core/Crypto/HMAC_512/: HMAC_512.cpp  HMAC_512.h
UVM/Blockchain_core/Crypto/Keccak/: kec256.h
UVM/Blockchain_core/Crypto/SHA3/: sha3.cpp  sha3.h
UVM/Blockchain_core/Crypto/SHA512/: SHA512.h
UVM/Blockchain_core/DB/: Blockchain_db.cpp  Blockchain_db.h  DB.cpp  DB.h
UVM/Blockchain_core/DB/JSON_merger/: JsonMergeOperator.cpp  JsonMergeOperator.h
UVM/Blockchain_core/Merkle/: MerkleTree.cpp  MerkleTree.h
UVM/Blockchain_core/Token/: Token.cpp  Token.h
UVM/Blockchain_core/Wallet/: WalletAccount.cpp  WalletAccount.h
UVM/Server/: Server.cpp  Server.h
UVM/containers/: list.h
UVM/error_handling/: Result.h
bip44/: BIP32.hpp  BIP39.hpp  CMakeLists.txt  Hex.h  SHA256.cpp  addresses.hpp  base58.hpp  ecdsa.hpp  main.cpp  utils.hpp
core/: .gitignore  cargo.toml
core/UVM/: CMakeLists.txt  Opcodes.h  README.md  TXManager.cpp  TXManager.h  VM.cpp  VM.h  main.cpp
core/UVM/Blockchain_core/: Block.cpp  Block.h  Hex.h  Transaction.cpp  Transaction.h
core/UVM/Blockchain_core/Crypto/: Keccak256.cpp  Keccak256.h  kec256.cpp  kec256.h
core/UVM/Blockchain_core/DB/: Blockchain_db.cpp  Blockchain_db.h  Unit_CF.h
core/UVM/Blockchain_core/Token/: Token.cpp  Token.h
core/UVM/Blockchain_core/Wallet/: WalletAccount.cpp  WalletAccount.h
core/UVM/ENV/: env.h
core/UVM/error_handling/: Optional.h  result.h
core/UVM/rocksdb/: advanced_options.h  cache.h  cache_bench_tool.h  cleanable.h  compaction_filter.h  compaction_job_stats.h  comparator.h  compression_type.h  concurrent_task_limiter.h  configurable.h  convenience.h  customizable.h  data_structure.h  db.h  db_bench_tool.h  db_dump_tool.h  db_stress_tool.h  env.h  env_encryption.h  experimental.h  file_checksum.h  file_system.h  filter_policy.h  flush_block_policy.h  functor_wrapper.h  io_status.h  iostats_context.h  iterator.h  ldb_tool.h  listener.h  memory_allocator.h  memtablerep.h  merge_operator.h  metadata.h  options.h  perf_context.h  perf_level.h  persistent_cache.h  rate_limiter.h  secondary_cache.h  (+28 more)
core/UVM/rocksdb/utilities/: agg_merge.h  backup_engine.h  cache_dump_load.h  checkpoint.h  convenience.h  customizable_util.h  db_ttl.h  debug.h  env_mirror.h  info_log_finder.h  ldb_cmd.h  ldb_cmd_execute_result.h  leveldb_options.h  memory_util.h  object_registry.h  optimistic_transaction_db.h  option_change_migration.h  options_type.h  options_util.h  replayer.h  sim_cache.h  stackable_db.h  table_properties_collectors.h  transaction.h  transaction_db.h  transaction_db_mutex.h  write_batch_with_index.h
core/UVM/rocksdb/utilities/lua/: rocks_lua_util.h
core/block/: Cargo.toml
core/block/block/src/: lib.rs
core/block/src/: lib.rs
core/example/: README.md
core/mnemonic/: Cargo.toml
core/mnemonic/src/: lib.rs
core/serializer/: Cargo.toml
core/serializer/src/: lib.rs
core/server/: Cargo.toml  output.txt
core/transaction/: .gitignore  Cargo.toml
core/wall/: Cargo.toml
core/wall/src/: main.rs  pkcs8.rs  wallet.rs
core/wallet/: Cargo.toml
libdevcore/bip44/: BIP44.hpp  CMakeLists.txt  SHA256.h  ecdsa.hpp
rocksdb_uvm_support/: CMakeLists.txt  main.cpp
rocksdb_uvm_support/DB/: Blockchain_db.cpp  Blockchain_db.h  DB.cpp  DB.h
rocksdb_uvm_support/error_handling/: Result.h
unit/: CMakeLists.txt  UnitInitiator.h  main.cpp
unit/blockHandler/: BlockHandler.h  Blockchain.h  DBStaticWriter.h  ShardInserter.h  TransactionProcessor.h
unit/global/: GlobalVariables.h
unit/global/errors/: WalletErrors.h
unit/libdevcore/: CMakeLists.txt
unit/libdevcore/bip44/: BIP32.hpp  BIP39.hpp  BIP44.hpp  SHA256.cpp  addresses.hpp  base58.hpp  ecdsa.hpp
unit/libdevcore/crypto/HMAC_512/: HMAC_512.h
unit/libdevcore/crypto/SHA3/: sha3.cpp
unit/libdevcore/crypto/keccak/: kec256.h
unit/libdevcore/datastructures/account/: AbstractAccount.h  Token.h  WalletAccount.h
unit/libdevcore/datastructures/blockchain/block/: Block.h  BlockBuilder.h  BlockHeader.h  Shard.h
unit/libdevcore/datastructures/blockchain/transaction/: Transaction.h  ValidTransaction.h
unit/libdevcore/datastructures/concurrency/: DBWriter.h  ThreadPool.h
unit/libdevcore/datastructures/containers/: queue.h  unordered_set.h  vector.h
unit/libdevcore/datastructures/request/: RawTransaction.h  TransactionRequest.cpp  TransactionRequest.h
unit/libdevcore/datastructures/trees/: MerkleTree.cpp  MerkleTree.h
unit/libdevcore/db/: DB.h  DBError.h  DBProvider.h  DBStatus.h  DBWriter.h  JsonMergeOperator.h
unit/libdevcore/pointers/: lazy_pointer.h
unit/libdevcore/utils/: StringUtil.cpp  StringUtil.h
unit/pools/: PendingPool.h  TransactionPool.h  TransactionPoolErrors.h
unit/server/: RpcExceptions.h  RpcFilterBuilder.h  RpcFilterChain.h  RpcFilterObject.h  RpcMethod.h  Server.cpp  Server.h  ServerIncludes.h  explorer_handler.h  http_session.cpp  http_session.hpp  listener.cpp  listener.h  listener.hpp  shared_state.cpp  shared_state.hpp  websocket_session.cpp  websocket_session.hpp
vm_test_implementation/: CMakeLists.txt  main.cpp
vm_test_implementation/UVM/: VM.h  VMHandler.h
vm_test_implementation/UVM/DataTypes/: Object.h  PrecompiledFunction.h  boolean.h  collection.h  d64.h  i32.h  str.h  u128.h  u256.h  u64.h
vm_test_implementation/UVM/DataTypes/Pools/: SharedConstantPool.h  UniqueConstantPool.h
vm_test_implementation/timeTest/: LogDuration.h
(+42 files in other folders)
