[package]
name = "mnemonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
bip0039 = "0.10.1"
orion = "0.17.1"
hmac = "0.12.1"
hex = "0.4.3"
sha3 = "0.10.1"
byteorder = "1.4.3"
base58 = "0.2.0"