[package]
name = "serializer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For (struct <-> JSON) conversions (from https://turreta.com/2019/09/22/rust-convert-struct-instances-to-and-from-json/)
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
