[package]
name = "wall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
ed25519-dalek = "1.0.1"
ed25519 = "1.5.1"
pkcs8 = "0.9.0"
sha3 = "0.10.1"
hex-literal = "0.3.4"
bip0039 = "0.10.1"
hex = "0.4.3"
hmac = "0.12.1"
binascii = "0.1.4"
leveldb = "0.8"